# wowibotti_suite

./: .gitignore  .gitmodules  README.md  REVERSING_NOTES.txt  TBC_REVERSING_NOTES.txt  encounter_template.json.tmpl  potti.conf  potti.conf.template  wowibotti_suite.sln
Debug/: potti.conf
Py_wowmem/: Py_wowmem.vcxproj  Py_wowmem.vcxproj.filters  om_python.cpp
Release/: wowibottihookdll.iobj  wowibottihookdll.ipdb  wowipotti2.iobj  wowipotti2.ipdb
dscript/: sp_test.lole  test.lole
front/: index.html  package-lock.json  package.json
front/src/: App.svelte  app.css  consts.js  error_display.js
front/src/lib/: Character.svelte  CharacterSelect.svelte  PatchOption.svelte
hooks/: post-build-rust.bat
lole/: TODO.txt  class_config.lua  death_knight_blood.lua  death_knight_uh.lua  druid_balance.lua  druid_feral.lua  druid_resto.lua  dscript.lua  encounter.lua  event_handler.lua  frame.lua  frame_tests.lua  global_vars.lua  hunter.lua  json.lua  lole.lua  lole.toc  lole.xml  lole_buffs.lua  lole_common.lua  mage_fire.lua  mage_frost.lua  noob_config.lua  opcodes.lua  paladin_holy.lua  paladin_prot.lua  paladin_retri.lua  priest_disc.lua  priest_holy.lua  priest_shadow.lua  ranged_hunter.lua  rogue.lua  rogue_combat.lua  rotation.lua  shaman_common.lua  shaman_elem.lua  shaman_encha.lua  shaman_enh.lua  shaman_resto.lua  subcommands.lua  (+7 more)
lole/encounter_scripts/: encounter_template.json.tmpl
lole/encounters/: encounter_template.json
lole/tmp_leveling/: aoe_druid_balance.lua  aoe_mage_frost.lua  aoe_warlock_destruction.lua  shaman_resto_leveling.lua  tmp_hunter.lua  tmp_mage.lua  tmp_paladin.lua  tmp_priest.lua  tmp_shaman.lua  tmp_warlock.lua  tmp_warrior.lua
rust/: .gitignore  Cargo.toml  README.md  build-release.bat  build-win.bat  database_dump.sh  injector.bat  justfile
rust/.cargo/: config.toml
rust/addonmessage_broker/: Cargo.toml
rust/addonmessage_broker/src/: client.rs  dummy-client.rs  lib.rs  server-standalone.rs  server.rs
rust/broker/: Cargo.toml
rust/broker/src/: client.rs  dummy-client.rs  server.rs
rust/broker_standalone/: Cargo.toml
rust/broker_standalone/src/: client.rs  server.rs
rust/dll/: Cargo.toml  build.rs  divxdecoder.def  version.def
rust/dll/src/: addonmessage.rs  addrs.rs  assembly.rs  ctm.rs  divx.rs  input.rs  lib.rs  linalg.rs  lua.rs  objectmanager.rs  patch.rs  socket.rs  spell_error.rs  wc3.rs  wowproto_opcodes.rs
rust/injector/: Cargo.toml  Config.wtf  potti.conf.json  potti.conf.json.example  randomize_windows_niri.sh
rust/injector/src/: inject.rs  linux.rs  main.rs  types.rs  web.rs  windows.rs
rust/macros/: Cargo.toml
rust/macros/src/: lib.rs
rust/shared/: Cargo.toml
rust/shared/src/: lib.rs
rust/wowibotti_suite_types/: Cargo.toml
rust/wowibotti_suite_types/src/: lib.rs
shaders/: compile.bat  fs.glsl  gradient_ps.hlsl  gradient_vs.hlsl  imp_fs.glsl  ps.hlsl  quad_vs.hlsl  rev_fs.glsl  rgradient_ps.hlsl  vs.glsl  vs.hlsl
shaders/avoid/: fs.glsl  gs.glsl  vs.glsl
shaders/debug/: fs.glsl  vs.glsl
shaders/imp/: fs.glsl  vs.glsl
shaders/rev/: fs.glsl
wowibottihookdll/: ObjectManager.cpp  ObjectManager.h  addrs.h  aux_window.cpp  aux_window.h  creds.cpp  creds.h  ctm.cpp  ctm.h  custom_d3d.cpp  custom_d3d.h  defs.h  dipcapture.cpp  dipcapture.h  dllmain.cpp  dllmain.h  dungeon_script.cpp  dungeon_script.h  govconn.cpp  govconn.h  hooks.cpp  hooks.h  input.cpp  input.h  libssl_static.lib  linalg.cpp  linalg.h  lua.cpp  lua.h  opcodes.cpp  opcodes.h  packet.cpp  packet.h  patch.cpp  patch.h  pathfinding.cpp  pathfinding.h  ps.h  ps.hlsl  qps.bat  (+21 more)
wowibottihookdll/Debug/: vc140.idb
wowibottihookdll/Debug/wowibottihookdll.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  wowibottihookdll.lastbuildstate
wowibottihookdll/Release/wowibottihookdll.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
wowibottihookdll_rust/: .ignore  Cargo.toml  build.bat
wowibottihookdll_rust/broker/: Cargo.toml
wowibottihookdll_rust/broker/src/: server.rs
wowibottihookdll_rust/dll/: Cargo.toml
wowibottihookdll_rust/dll/src/: addrs.rs  lib.rs  objectmanager.rs  patch.rs  socket.rs  spell_error.rs
wowibottihookdll_rust/src/: addresses.rs  addrs.rs  asm.rs  assembly.rs  ctm.rs  lib.rs  lua.rs  objectmanager.rs  opcodes.rs  patch.rs  socket.rs  spell_error.rs  vec3.rs
wowipotti2/: ReadMe.txt  UI.h  launch_wow_clients.ps1  resource.rc  stdafx.cpp  wowipotti2.cpp  wowipotti2.h  wowipotti2.vcxproj  wowipotti2.vcxproj.filters
wowipotti2/Debug/: vc140.idb
wowipotti2/Debug/wowipotti2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
wowipotti2/Release/wowipotti2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  wowipotti2.lastbuildstate
