[package]
name = "wowibottihookdll_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.51.1", features = ["Win32_Foundation", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging", "Win32_System_Console", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_System_Threading"] }
