[package]
name = "wowibottihookdll_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
windows = { version = "0", features = ["Win32_Foundation", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging", "Win32_System_Console", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_Storage_FileSystem", "Win32_Security", "Win32_Networking_WinSock", "Win32_System_SystemInformation", "Win32_System_LibraryLoader"] }

[features]
console = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
