[package]
name = "addonmessage_broker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = "0"
rand = "0"
tokio = { version = "1", features = ["net", "macros", "rt", "io-util", "rt-multi-thread"] }
windows = { version = "0", features = ["Win32_Foundation", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging", "Win32_System_Console", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_Storage_FileSystem", "Win32_Security", "Win32_Networking_WinSock", "Win32_System_SystemInformation", "Win32_System_LibraryLoader"] }

tracing = { version = "0" }
tracing-subscriber = { version = "0", features = ["env-filter"] }

[[bin]]
name = "broker-server"
path = "src/server-standalone.rs"

[[bin]]
name = "dummy-client"
path = "src/dummy-client.rs"
