[package]
name = "addonmessage_broker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = "0"
rand = "0"
tokio = { version = "1", features = ["net", "macros", "rt", "io-util", "rt-multi-thread", "time"] }

tracing = { version = "0" }
tracing-subscriber = { version = "0", features = ["env-filter"] }
shared = {path="../shared"}
anyhow = "1"

[[bin]]
name = "broker-server"
path = "src/server-standalone.rs"

[[bin]]
name = "dummy-client"
path = "src/dummy-client.rs"
