[package]
name = "broker"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = "0"
rand = "0"
tokio = { version = "1", features = ["net", "macros", "rt", "io-util", "rt-multi-thread"] }
windows = { version = "0", features = ["Win32_Foundation", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging", "Win32_System_Console", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_Storage_FileSystem", "Win32_Security", "Win32_Networking_WinSock", "Win32_System_SystemInformation", "Win32_System_LibraryLoader"] }

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "dummy-client"
path = "src/dummy-client.rs"


