[package]
name = "broker_standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
broker = {path="../broker"}
tokio = { version = "1", features = ["net", "macros", "rt", "io-util", "rt-multi-thread"] }

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "dummy-client"
path = "src/client.rs"
