[package]
name = "injector"
version = "0.1.0"
edition = "2021"

[dependencies]
wowibottihookdll = { path="../dll" }
bitcode = "0"
http = "1"
http-body-util = "0"
hyper = { version = "1", features = ["server", "http1"] }
lazy_static = "1"
nohash-hasher = "0"
pin-project-lite = "0"
rand = "0"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tokio = {version = "1", features=["rt", "time"]}
tokio-util = { version = "0", features = ["rt"] }
windows = { version = "0", features = ["Win32_Foundation", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging", "Win32_System_Console", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_Storage_FileSystem", "Win32_Security", "Win32_Networking_WinSock", "Win32_System_SystemInformation", "Win32_System_LibraryLoader", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
egui = "0"
eframe = "0"
egui_extras = { version = "0", features = ["file", "image"] }
image = { version = "0", features = ["png"] }
