[package]
name = "injector"
version = "0.1.0"
edition = "2021"

[features]
native-ui = ["dep:egui", "dep:eframe", "dep:egui_extras", "dep:image"]
web = [ "dep:tokio", "dep:tokio-util", "dep:http", "dep:http-body-util", "dep:hyper" ]
addonmessage_broker = [ "dep:addonmessage_broker", "dep:tokio" ]
default = ["native-ui", "addonmessage_broker"]

[dependencies]
wowibottihookdll = { path="../dll" }
addonmessage_broker = { path="../addonmessage_broker", optional=true }
windows = { version = "0", features = ["Win32_Foundation", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging", "Win32_System_Console", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_Storage_FileSystem", "Win32_Security", "Win32_Networking_WinSock", "Win32_System_SystemInformation", "Win32_System_LibraryLoader", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
lazy_static = "1"
nohash-hasher = "0"
pin-project-lite = "0"
rand = "0"
bitcode = "0"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tokio = {version = "1", features=["rt", "time"], optional=true}
tokio-util = { version = "0", features = ["rt"], optional=true }
http = {version = "1", optional=true }
http-body-util = {version = "0", optional=true }
hyper = { version = "1", features = ["server", "http1"], optional=true }

egui = { version="0", optional=true }
eframe = { version="0", optional=true }
egui_extras = { version = "0", features = ["file", "image"], optional=true }
image = { version = "0", features = ["png"], optional=true }

tracing = { version = "0" }
tracing-subscriber = { version = "0", features = ["env-filter"] }
