[package]
name = "broker"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = "0.6.0"
rand = "0.8.5"
tokio = { version = "1", features = ["net", "macros", "rt", "io-util", "rt-multi-thread"] }

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "dummy-client"
path = "src/dummy-client.rs"


